# MultiLanguageProjects

./: Programming.md  README.md
examples/algorithms/merge_sort/cpp/: main.cpp  program_files
examples/applications/regexp_validator_cmdline/guide/: code.psu
examples/concepts/load_collections/cpp/: main.cpp
examples/concepts/load_collections/java/: LoadCollections.java  build.sh
examples/concepts/print/cpp/: build.sh  main.cpp  run.sh
examples/concepts/print/java/: Print.java  clean.sh  run.sh
examples/concepts/read_file/cpp/: Makefile  clean.sh  main.cpp  program_files
examples/concepts/read_file/java/: ReadFile.java  build.sh  run.sh
installs/: install.node.sh  install.qt5.sh  install.rails.sh  install.rust.iced.sh  install.rust.sh
languages/: Template
languages/c++/installs/: main.sh
program_files/: unsorted_numbers.csv
projects/RegExp_Validator_Cmd/cpp/cmake/: CMakeLists.txt  main.cpp
projects/RegExp_Validator_Cmd/guide/: README.md  code.psu
projects/RegExp_Validator_Gui/cpp/cmake/: mainwindow.ui
projects/RegExp_Validator_Gui/cpp/qmake/: mainwindow.cpp
projects/RegExp_Validator_Gui/guide/: README.md
projects/RegExp_Validator_Gui/node/js_client/: index.html  index.js  package-lock.json  server.js
projects/lexer/cpp/cmake/: CMakeLists.txt
projects/regexp_validator_cmdline/cpp/desktop_cmake/: CMakeLists.txt  (+1 more)
projects/regexp_validator_gui/cpp/desktop_qt_cmake/: CMakeLists.txt
scripts/cpp/: Makefile.single_file_run  basic_run.sh  setup_basic_single_file_env.sh
scripts/java/: basic_single_file_run.sh  setup_basic_single_file_env.sh
(+23 files in other folders)
